# recipeyak

./: .dockerignore  .editorconfig  .env  .env-dev-example  .env-example  .eslintrc.js  .gitattributes  .gitignore  .kodiak.toml  .prettierignore  .prettierrc.js  .pylintrc  .stylelintrc.js  .travis.yml  .watchmanconfig  CODEOWNERS  Dockerfile-base  README.md  base.Dockerfile  build  build.sh  create-db-from-backup  deploy  deploy.sh  design.dot  docker-compose-deploy.yml  docker-compose-dev-django.yml  docker-compose-dev.yml  docker-compose-prod.yml  example_recipe.toml  example_recipe.yml  maintenance_mode  maintenance_mode.sh  mockup.bmpr  models.py  netlify.toml  package.json  pyproject.toml  tox.ini  tsconfig.json  (+3 more)
backend/: .coveragerc  .dockerignore  .env-example  .isort.cfg  .prettierignore  .prettierrc.js  Dockerfile-dev  Dockerfile-prod  Makefile  Pipfile  README.md  api-schema.json  bootstrap-dev.sh  bootstrap-prod.sh  django.Dockerfile  entrypoint.sh  ingredients.csv  manage.py  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  set_server.py  tox.ini  wait-for-it.sh
backend/backend/: authentication.py  logging.py  middleware.py  patches.py  request_state.py  routing.py  settings.py  test_middleware.py  urls.py  utils.py  wsgi.py
backend/cli/: __init__.py  cmds.py  config.py  decorators.py  docker_machine.py  manager.py
backend/core/: admin.py  config.py  conftest.py  consumers.py  django_settings.py  extensions.py  inflect.py  logging.py  middleware.py  models.py  ordering.py  ordering_js.py  patches.py  permissions.py  renderers.py  request.py  request_state.py  response.py  routing.py  schemas.py  search.py  serialization.py  serializers.py  settings.py  test_authentication.py  test_calendar.py  test_cart.py  test_consumers.py  test_export.py  test_middleware.py  test_models.py  test_recipes.py  test_recipes_permissions.py  test_renderers.py  test_search.py  test_serialization.py  test_shopping_list.py  test_steps.py  test_teams.py  test_user.py  (+8 more)
backend/core/api/: calendar_generic_views.py  export_recipes_list_view.py  ical_detail_view.py  ingredients_detail_view.py  ingredients_list_view.py  logging.py  login_user_detail_view.py  middleware.py  notes_view.py  password_reset_confirm_view.py  password_reset_view.py  reactions_view.py  recipe_copy_view.py  recipe_detail_view.py  recipe_duplicate_view.py  recipe_list_view.py  recipe_move_view.py  register_user_detail_view.py  sections_view.py  sessions_detail_view.py  sessions_list_view.py  steps_detail_view.py  steps_list_view.py  team_generic_view.py  team_invite_generic_view.py  team_members_generic_view.py  team_shopping_list_detail_view.py  test_calendar_generic_view.py  test_drf_json_renderer.py  test_ical_detail_view.py  test_login_user_detail_view.py  test_recently_created.py  test_recipe_sections_generic.py  test_recipe_timeline.py  test_recipes_generic_changelog.py  test_serialization.py  test_shopping_list_personal.py  test_steps_generic_view.py  test_team_calendar.py  test_team_generic_view.py  (+10 more)
backend/core/auth/: permissions.py  serializers.py  social_serializers.py  test_authentication.py  urls.py  utils.py  views.py
backend/core/cumin/: __init__.py  cat.py  combine.py  inflect.py  quantity.py  test_cat.py  test_combine.py  test_parsing.py  test_quantity.py
backend/core/django/: settings.py
backend/core/export/: serializers.py  test_export.py  urls.py  views.py
backend/core/ical/: test_ical_views.py  utils.py  views.py
backend/core/migrations/: 0001_initial.py  0002_remove_myuser_is_superuser.py  0003_auto_20170806_1357.py  0004_auto_20170806_1408.py  0005_auto_20170806_1450.py  0006_auto_20170808_0017.py  0007_auto_20170917_0333.py  0008_auto_20171001_0026.py  0009_auto_20171001_0602.py  0010_auto_20171001_2119.py  0011_auto_20171001_2129.py  0012_auto_20171019_0350.py  0013_ingredient_name.py  0014_auto_20171116_1920.py  0015_auto_20171116_1924.py  0016_auto_20171130_0632.py  0016_recipe_views.py  0017_recipe_servings.py  0018_merge_20171202_0538.py  0019_auto_20171202_1827.py  0020_recipe_cart_additions.py  0021_cartitem_total_cart_additions.py  0022_remove_recipe_cart_additions.py  0023_team.py  0024_team_name.py  0025_auto_20180301_0310.py  0026_auto_20180301_0442.py  0027_myuser_membership.py  0028_auto_20180301_0635.py  0029_invite.py  0030_auto_20180301_2201.py  0031_auto_20180301_2300.py  0032_auto_20180302_0221.py  0033_membership_is_active.py  0034_auto_20180303_0818.py  0035_team_is_public.py  0036_auto_20180304_0002.py  0037_auto_20180304_0138.py  0038_auto_20180307_0530.py  0039_auto_20180308_0708.py  (+79 more)
backend/core/models/: __init__.py  base.py  ingredient.py  invite.py  membership.py  my_user.py  note.py  note_upload.py  reaction.py  recipe.py  recipe_change.py  recipe_view.py  scheduled_recipe.py  scrape.py  section.py  shopping_list.py  step.py  team.py  timeline_event.py  upload.py  user.py
backend/core/recipes/: scraper.py  search.py  serializers.py  test_ingredients.py  test_recipe_changelog.py  test_recipe_sections.py  test_recipe_timeline.py  test_recipes.py  test_recipes_permissions.py  test_search.py  test_steps.py  utils.py  views.py
backend/core/schedule/: inflect.py  serializers.py  test_calendar.py  test_shopping_list.py  test_team_calendar.py  (+3 more)
backend/docker_compose/: __init__.py  docker_compose_deploy.py  docker_compose_dev.py  test_docker_compose.py
backend/lints/: find_conflicts
backend/pytest_plugin/: plugin.py
backend/recipeyak/: category.py  category_test.py  combine.py  combine_test.py  config.py  conftest.py  find_unknown_categories.py  fixtures.py  generate_types.py  ical.py  inflect.py  parsing.py  parsing_test.py  realtime.py  storage.py  string.py  versioning.py
backend/rest_auth/: app_settings.py  apps.py  serializers.py  urls.py  views.py
backend/s/: check_migrations  check_missing_api_schema_changes  check_missing_codegen_changes  check_missing_migrations  db_download_backup  dev  find_unknown_categories  fmt  generate-client  install  lint  lint_api_schema  manage  ruff  run  squawk.py  test  typecheck
(+1597 files in other folders)
