[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Steve Dignam <steve@dignam.xyz>", "Christopher Dignam <chris@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.12.4"
Django = "^3.2.9"
dj-database-url = "0.4.2"
django-allauth = "^0.46.0"
drf-nested-routers = "0.90.0"
gunicorn = "19.7.1"
psycopg2 = "2.8.6"
pyyaml = "^5.1"
django-user-sessions = "^1.6"
dataclasses = "^0.6.0"
django-softdelete = "^0.9.2"
sentry-sdk = {git = "https://github.com/chdsbd/sentry-python", rev = "chris/trace-response-render"}
python-dotenv = "^0.10.1"
typing_extensions = "^3.7"
icalendar = "^4.0"
djangorestframework-types = "^0.2.0"
orjson = "^3.6.4"

[tool.poetry.dev-dependencies]
pytest = "6.0.1"
pytest-cov = "^2.5.1"
pytest-django = "^3.1.2"
ipdb = "^0.13.9"
mypy = "^0.910"
flake8 = "3.8.4"
black = "19.10b0"
pytest-watch = "^4.2"
mypy_extensions = "^0.4.1"
flake8-pie = "^0.4.0"
flake8-print = "^3.1"
isort = "4.3.21"
flake8-comprehensions = "^2.1"
django-types = "^0.10.0"
types-PyYAML = "^6.0.0"
types-requests = "^2.25.11"

[tool.black]
exclude = '''
/(
  | \.venv
  | node_modules
)/
'''
