[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Steve Dignam <steve@dignam.xyz>", "Christopher Dignam <chris@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.12.4"
Django = "^3.2.9"
dj-database-url = "0.4.2"
django-allauth = "^0.46.0"
gunicorn = "19.7.1"
pyyaml = "^5.1"
django-user-sessions = "^1.6"
dataclasses = "^0.6.0"
sentry-sdk = {git = "https://github.com/chdsbd/sentry-python", rev = "chris/trace-response-render"}
python-dotenv = "^0.10.1"
typing_extensions = "*"
icalendar = "^4.0"
djangorestframework-types = "^0.2.0"
orjson = "3.8.1"
psycopg2-binary = "^2.9.3"
boto3 = "^1.24.44"
pydantic = "^1.9.1"
yarl = "^1.8.1"
recipe-scrapers = "^14.13.0"
advocate = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "6.0.1"
pytest-cov = "^2.5.1"
pytest-django = "^3.1.2"
ipdb = "^0.13.9"
mypy = "^0.910"
flake8 = "3.8.4"
pytest-watch = "^4.2"
mypy_extensions = "^0.4.1"
flake8-pie = "^0.4.0"
flake8-print = "^3.1"
flake8-comprehensions = "^2.1"
django-types = "^0.16.0"
types-PyYAML = "^6.0.0"
types-requests = "^2.25.11"
syrupy = "^1.5.0"
black = "^22.6.0"
boto3-stubs = {extras = ["s3"], version = "^1.24.44"}
flake8-tidy-imports = "^4.8.0"
types-urllib3 = "^1.26.23"
isort = "5.10.1"

[tool.black]
exclude = '''
/(
  | \.venv
  | node_modules
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true
