[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Steve Dignam <steve@dignam.xyz>", "Christopher Dignam <chris@dignam.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.12.4"
Django = "^3.2.9"
dj-database-url = "0.4.2"
django-allauth = "^0.46.0"
gunicorn = "20.1.0"
pyyaml = "^5.1"
django-user-sessions = "^1.6"
dataclasses = "^0.6.0"
python-dotenv = "0.21.0"
typing_extensions = "*"
icalendar = "^4.0"
djangorestframework-types = "^0.2.0"
orjson = "3.8.1"
psycopg2-binary = "^2.9.3"
boto3 = "^1.24.44"
pydantic = "^1.9.1"
yarl = "^1.8.1"
recipe-scrapers = "14.23.0"
advocate = "^1.0.0"
sentry-sdk = {git = "https://github.com/chdsbd/sentry-python.git", rev = "chris/trace-response-render"}
Pillow = "^9.3.0"
httpx = "^0.23.1"
asyncpg = "^0.27.0"
asyncpg-stubs = "^0.27.0"
typer = "^0.7.0"
structlog = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-cov = "^2.5.1"
pytest-django = "4.5.2"
ipdb = "^0.13.9"
mypy = "^0.910"
flake8 = "3.8.4"
pytest-watch = "^4.2"
mypy_extensions = "^0.4.1"
flake8-pie = "^0.4.0"
flake8-print = "^3.1"
flake8-comprehensions = "^2.1"
django-types = "^0.16.0"
types-PyYAML = "^6.0.0"
types-requests = "^2.25.11"
syrupy = "^3.0.5"
black = "^22.6.0"
boto3-stubs = {extras = ["s3"], version = "^1.24.44"}
flake8-tidy-imports = "^4.8.0"
types-urllib3 = "^1.26.23"
isort = "5.10.1"
types-dj-database-url = "^1.0.0"

[tool.black]
exclude = '''
/(
  | \.venv
  | node_modules
)/
'''

[tool.isort]
profile = "black"
src_paths = ["recipeyak"]
known_third_party = ["django"]
known_first_party = ["recipeyak"]
skip_gitignore = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "recipeyak.django.settings"
python_files = "*_test.py *_tests.py"
addopts = "-s --pdbcls IPython.terminal.debugger:TerminalPdb --reuse-db -p no:warnings"

[tool.mypy]
mypy_path = "./backend/typings"

show_column_numbers = true
show_error_codes = true

disallow_any_unimported=false
disallow_any_expr=false
disallow_any_decorated=false
disallow_any_explicit=false
disallow_any_generics=true
disallow_subclassing_any=false

disallow_untyped_calls=false
disallow_untyped_defs=true
disallow_incomplete_defs=true
check_untyped_defs=true
disallow_untyped_decorators=true

no_implicit_optional=true
strict_optional=true

warn_redundant_casts=true
warn_unused_ignores=true
warn_no_return=true
warn_return_any=true
# doesn't consider how methods can change the value of properties
warn_unreachable=false

strict_equality=true

ignore_missing_imports=false

plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    'allauth.*',
    'icalendar.*',
    'advocate.*',
    'user_sessions.*',
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
